# audihaptic

./: .gitignore  AudioHaptics.vcxproj  AudioProcessor.cpp  AudioProcessor.h  HapticController.cpp  HapticController.h  main.cpp
android_prototype/: README.md  build.gradle  local.properties  settings.gradle
android_prototype/app/: build.gradle
android_prototype/app/src/main/: AndroidManifest.xml
android_prototype/app/src/main/cpp/: CMakeLists.txt  haptic-bridge.cpp
android_prototype/app/src/main/java/com/example/audihaptic/: CaptureService.kt  MainActivity.kt  MyApplication.kt  NativeLib.kt
android_prototype/app/src/main/res/values/: strings.xml  themes.xml
android_prototype/app/src/main/res/values-zh/: strings.xml
android_prototype/gradle/wrapper/: gradle-wrapper.properties
